5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1670_1392.log
== TEST (2019-04-16 18:33:14) 
-- CODE:
taxa=30
se der menos=3<m**3
se der superior=3,50<m**3
print(round(taxa, 2))
-- ERROR:
File "XXXX", line 2
    se der menos=3<m**3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:50) 
-- CODE:
taxa =30
cm=3,00 por m**3
cs=3,50 por m**3
print(round(taxa, 2))
-- ERROR:
File "XXXX", line 2
    cm=3,00 por m**3
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:56) 
-- CODE:
taxa =30
cm=3,00 por m**3
cs=3,50 por m**3
print(round(taxa, 2))
-- ERROR:
File "XXXX", line 2
    cm=3,00 por m**3
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:55) 
-- CODE:
var=30
var1= ("se 30< 10m**3,cobra 3,50")
var2= ("se 30> 10m**3,cobra 3,00")
print(30+var1)
print(30+var2)
print(round(, 2))
-- ERROR:
File "XXXX", line 6
    print(round(, 2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:11) 
-- CODE:
var=30
var1= ("se 30< 10m**3,cobra 3,50")
var2= ("se 30> 10m**3,cobra 3,00")
print(30+var1)
print(30+var2)
print(round(var, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(30+var1)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:31) 
-- CODE:
var=30
var1= ("se 30< 10m**3,cobra 3,50")
var2= ("se 30> 10m**3,cobra 3,00")
print(round(, 2))
-- ERROR:
File "XXXX", line 4
    print(round(, 2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:33) 
-- CODE:
var=30
var1= ("se 30< 10m**3,cobra 3,50")
var2= ("se 30> 10m**3,cobra 3,00")
print(round(, 2))
-- ERROR:
File "XXXX", line 4
    print(round(, 2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:44) 
-- CODE:
var=30
var1= ("se for< 10m**3,cobra 3,50")
var2= ("se for >10m**3,cobra 3,00")
print(round(, 2))
-- ERROR:
File "XXXX", line 4
    print(round(, 2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:02) 
-- CODE:
var=30
var1= ("se for< 10m**3,cobra 3,50")
var2= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:15) 
-- CODE:
var=30
var1= ("se for< 10m**3,cobra 3,50")
var2= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:43:22) 
-- CODE:
var=30
var1= ("se for< 10m**3,cobra 3,50")
var2= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- EXECUTION TIME:
0.18767
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
30
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
30
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:30) 
-- CODE:
var=30
var1= ("se for< 10m**3,cobra 3,50")
var2= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:53) 
-- CODE:
var=30
var1= ("se for< 10m**3,cobra 3,50")
var2= ("se for >10m**3,cobra 3,00")
print(round(var+va1+var2, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(var+va1+var2, 2))
NameError: name 'va1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:49) 
-- CODE:
var=30+cm+cs
cm= ("se for< 10m**3,cobra 3,50")
cs= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=30+cm+cs
NameError: name 'cm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:22) 
-- CODE:
var=30*10**3
cm= ("se for< 10m**3,cobra 3,50")
cs= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- OUTPUT:
30000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:50) 
-- CODE:
var=30*10**3<10**3
cm= ("se for< 10m**3,cobra 3,50")
cs= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- OUTPUT:
30000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:31) 
-- CODE:
taxa=30*10**3<10**3
var a= ("se for< 10m**3,cobra 3,50")
var b= ("se for >10m**3,cobra 3,00")
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var a= ("se for< 10m**3,cobra 3,50")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:56) 
-- CODE:
taxa=30*10**3<10**3
var a= ("se for< 10m**3,= 3,50")
var b= ("se for >10m**3,= 3,00")
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var a= ("se for< 10m**3,= 3,50")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:57) 
-- CODE:
taxa=30*10**3<10**3
var a= ("se for< 10m**3,= 3,50")
var b= ("se for >10m**3,= 3,00")
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var a= ("se for< 10m**3,= 3,50")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:57) 
-- CODE:
taxa=30*10**3<10**3
var a= ("se for< 10m**3,= 3,50")
var b= ("se for >10m**3,= 3,00")
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var a= ("se for< 10m**3,= 3,50")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:57) 
-- CODE:
taxa=30*10**3<10**3
var a= ("se for< 10m**3,= 3,50")
var b= ("se for >10m**3,= 3,00")
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var a= ("se for< 10m**3,= 3,50")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:58) 
-- CODE:
taxa=30*10**3<10**3
var a= ("se for< 10m**3,= 3,50")
var b= ("se for >10m**3,= 3,00")
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var a= ("se for< 10m**3,= 3,50")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:58) 
-- CODE:
taxa=30*10**3<10**3
var= >10m**3,= 3,00
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var= >10m**3,= 3,00
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:40) 
-- CODE:
taxa=30*10**3<10**3
var= >10**3,= 3,00, < 10**3 = 3,50
print(round(var, 2))
-- ERROR:
File "XXXX", line 2
    var= >10**3,= 3,00, < 10**3 = 3,50
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:49) 
-- CODE:
taxa=30*10**3<10**3
var= >10**3,= 3,00, < 10**3 = 3,50
print(round(taxa, 2))
-- ERROR:
File "XXXX", line 2
    var= >10**3,= 3,00, < 10**3 = 3,50
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:59) 
-- CODE:
taxa=30*10**3
var= >10**3,= 3,00, < 10**3 = 3,50
print(round(taxa, 2))
-- ERROR:
File "XXXX", line 2
    var= >10**3,= 3,00, < 10**3 = 3,50
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
